# ccpo

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
benches/: conversion.rs  streaming.rs
config/: default.toml
config/examples/: gemini.toml  ollama.toml  openai.toml
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  mapping.rs  server.rs
src/conversion/: anthropic_to_provider.rs  mod.rs  provider_to_anthropic.rs
src/handlers/: count_tokens.rs  health.rs  messages.rs  mod.rs
src/models/: anthropic.rs  mod.rs  providers.rs
src/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs
tests/fixtures/: calculator_request.json  multi_turn_conversation.json  streaming_response.txt
