[package]
name = "ccpo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alfredo Carella <alfredo@example.com>"]
license = "MIT"
description = "Claude Code Proxy for Other APIs - Use Claude Code with OpenAI, Gemini, and Ollama"
repository = "https://github.com/alfredocarella/ccpo"
keywords = ["claude", "proxy", "llm", "openai", "gemini"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"
dirs = "5"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Streaming
eventsource-stream = "0.2"

# Utilities
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# Testing frameworks
tokio-test = "0.4"
rstest = "0.18"
proptest = "1"
wiremock = "0.6"
assert_matches = "1.5"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3"
serial_test = "3"
tower = "0.5.3"

[features]
default = []
functional-tests = []

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "streaming"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
